[gd_scene load_steps=3 format=3 uid="uid://5mtfnjjpuo7r"]

[ext_resource type="Script" uid="uid://f0dtpkpa38s4" path="res://Script/GameOverUI.gd" id="1_fg4p2"]
[ext_resource type="Texture2D" uid="uid://2fnbjqlubwwv" path="res://Asset/GAME OVER.png" id="2_qpupn"]

[node name="Gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fg4p2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qpupn")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 235.0
offset_right = 180.0
offset_bottom = 296.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time Survived: 00:00"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enemies Defeated: 0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 396.0
offset_top = 320.0
offset_right = 756.0
offset_bottom = 351.0
theme_override_constants/separation = 50

[node name="RestartButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Restart"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
